--- a/style.css
+++ b/style.css
@@ -9,3 +9,12 @@ p {
   line-height: 1.4;
   font-family: sans-serif;
 }
+
+span {
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+ul {
+  list-style: none;
+}
