--- a/style.css
+++ b/style.css
@@ -1,18 +1,50 @@
-h1 {
-  font-size: 42px;
-  text-transform: uppercase;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #0a0a0a;
+  color: #fff7ed;
+  font-family: "Roboto", sans-serif;
+  padding: 48px;
+}
+
+.header {
+  margin-bottom: 40px;
+}
+
+.fact-form {
+  background-color: #f97316;
+  margin-bottom: 40px;
+  padding: 16px 48px;
   text-align: center;
 }
 
-p {
-  font-size: 20px;
-  line-height: 1.4;
-  font-family: sans-serif;
+h1 {
+  font-size: 42px;
+  font-family: "Kalam", cursive;
+  color: #fff7ed;
 }
 
-span {
+.fact {
+  font-size: 20px;
+  line-height: 1.4;
+  background-color: #f97316;
+  color: #fff7ed;
+  margin: 16px;
+  padding: 16px 24px;
+  border: 4px solid #fff7ed;
+}
+
+.tag {
   text-transform: uppercase;
   font-size: 14px;
+  font-family: "Kalam", cursive;
+  padding-top: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 ul {
