--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ body {
 
 .header {
   margin-bottom: 40px;
+  background-color: #7c2d12;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .fact-form {
