--- a/style.css
+++ b/style.css
@@ -13,11 +13,15 @@ body {
 
 .header {
   margin-bottom: 40px;
-  background-color: #7c2d12;
-
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
 .fact-form {
@@ -31,6 +35,8 @@ h1 {
   font-size: 42px;
   font-family: "Kalam", cursive;
   color: #fff7ed;
+  line-height: 1;
+  margin: 6px;
 }
 
 .fact {
