--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ h1 {
   margin: 16px;
   padding: 16px 24px;
   border: 4px solid #fff7ed;
+  display: flex;
+  align-items: center;
+  gap: 24px;
 }
 
 .tag {
