--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   font-family: "Roboto", sans-serif;
   padding: 48px;
 }
-
+/* LAYOUT */
 .header {
   margin-bottom: 40px;
   display: flex;
@@ -18,17 +18,23 @@ body {
   justify-content: space-between;
 }
 
-.logo {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-}
-
 .fact-form {
   background-color: #f97316;
   margin-bottom: 40px;
   padding: 16px 48px;
   text-align: center;
+}
+
+.main {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+}
+/* ELEMENTS */
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
 h1 {
@@ -46,7 +52,9 @@ h1 {
   color: #fff7ed;
   margin: 16px;
   padding: 16px 24px;
+  letter-spacing: 2px;
   border: 4px solid #fff7ed;
+
   display: flex;
   align-items: center;
   gap: 24px;
