--- a/style.css
+++ b/style.css
@@ -42,6 +42,11 @@ body {
   gap: 16px;
 }
 
+.logo img {
+  width: 68px;
+  height: 68px;
+}
+
 h1 {
   font-size: 42px;
   font-family: "Kalam", cursive;
