--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #0a0a0a;
+  background-color: white;
   color: #fff7ed;
   font-family: "Roboto", sans-serif;
   padding: 48px 64px;
@@ -24,10 +24,13 @@ body {
 }
 
 .fact-form {
-  background-color: #f97316;
+  background-color: #57534e;
   margin-bottom: 40px;
   padding: 16px 48px;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  border-radius: 16px;
 }
 
 .main {
@@ -66,13 +69,21 @@ h1 {
   margin: 16px;
   padding: 16px 24px;
   letter-spacing: 2px;
+  border-radius: 16px;
   border: 4px solid #fafaf9;
 
   display: flex;
+  flex-direction: row;
   align-items: center;
   gap: 24px;
 }
 
+@media (max-width: 1200px) {
+  .fact {
+    flex-direction: column;
+    gap: 12px;
+  }
+}
 .tag {
   text-transform: uppercase;
   font-size: 14px;
@@ -138,4 +149,29 @@ ul {
 .btn-category {
   width: 100%;
   background-image: none;
+}
+
+.fact-form input,
+.fact-form select {
+  width: 250px;
+  background-color: #78716c;
+  border: none;
+  border-radius: 100px;
+  padding: 16px;
+  font-size: 16px;
+  color: inherit;
+  font-family: "Kalam", sans-serif;
+}
+
+.fact-form input::placeholder {
+  color: #a8a29e;
+}
+
+.fact-form input:first-child {
+  flex-grow: 1;
+}
+.fact-form span {
+  font-weight: 600;
+  font-size: 16;
+  margin-right: 18px;
 }
