--- a/style.css
+++ b/style.css
@@ -37,6 +37,12 @@ body {
   display: grid;
   grid-template-columns: 250px 1fr;
 }
+
+@media (max-width: 900px) {
+  .main {
+    grid-template-columns: 1fr;
+  }
+}
 /* ELEMENTS */
 
 .logo {
