--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
   font-family: "Roboto", sans-serif;
   padding: 48px 64px;
 }
+
+.hidden {
+  display: none !important;
+}
+
 /* MAIN LAYOUT */
 .container {
   max-width: 1500px;
